--- a/djangos/templates/bayi_Index.html
+++ b/djangos/templates/bayi_Index.html
@@ -207,66 +207,14 @@
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
           <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
-          
           <li class="nav-item">
-            <a href="#" class="nav-link">
+            <a href="/bayi" class="nav-link">
               <i class="fas fa-home"></i>
               <p>
                 {{element1.elementName}}
               </p>
             </a>
-          </li>
-          
-            <ul class="nav nav-treeview">
-              <li class="nav-item">
-                <a href="{%static 'pages/layout/top-nav.html'%}" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Top Navigation</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="{%static 'pages/layout/top-nav-sidebar.html'%}" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Top Navigation + Sidebar</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="{%static 'pages/layout/boxed.html'%}" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Boxed</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="{%static 'pages/layout/fixed-sidebar.html'%}" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Fixed Sidebar</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="{%static 'pages/layout/fixed-sidebar-custom.html'%}" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Fixed Sidebar <small>+ Custom Area</small></p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="{%static 'pages/layout/fixed-topnav.html'%}" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Fixed Navbar</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="{%static 'pages/layout/fixed-footer.html'%}" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Fixed Footer</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="{%static 'pages/layout/collapsed-sidebar.html'%}" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Collapsed Sidebar</p>
-                </a>
-              </li>
-            </ul>
+          </li>   
           </li>
           <li class="nav-item">
             <a href="/bayi/bayi_Urunler.html" class="nav-link">
@@ -275,9 +223,15 @@
                 {{element2.elementName}}
               </p>
             </a>
-            
           </li>
-
+          <li class="nav-item">
+            <a href="/bayi/bayi_Musteriler.html" class="nav-link">
+              <i class="fas fa-boxes"></i>
+              <p>
+                {{element6.elementName}}
+              </p>
+            </a>
+          </li>
            <li class="nav-item">
             <a class="nav-link">
               <i class="fas fa-sitemap"></i>
@@ -299,8 +253,15 @@
                   <p>{{element4.elementName}}</p>
                 </a>
               </li>
-              
-      
+            </ul>
+            <li class="nav-item">
+              <a href="/bayi/bayi_Finans.html" class="nav-link">
+                <i class="fas fa-boxes"></i>
+                <p>
+                  {{element7.elementName}}
+                </p>
+              </a>
+            </li>
           </li>
         </ul>
       </nav>
