Admin arayüzü iyileştirmeleri ve database güncellemeleri

--- a/djangos/templates/login.html
+++ b/djangos/templates/login.html
@@ -23,7 +23,7 @@
       <a class="h1"><b>SSB</b>LIFT</a>
     </div>
     <div class="card-body">
-      <p class="login-box-msg">Sign in to start your session</p>
+      <p class="login-box-msg">Panelinize erişmek için giriş yapın</p>
 
       <form action="login" method="post">
         {% csrf_token %}
@@ -56,21 +56,13 @@
           <h3>{{message}}</h3>
         {%endfor%}
       </div>
-      <div class="social-auth-links text-center mt-2 mb-3">
-        <a href="#" class="btn btn-block btn-primary">
-          <i class="fab fa-facebook mr-2"></i> Sign in using Facebook
-        </a>
-        <a href="#" class="btn btn-block btn-danger">
-          <i class="fab fa-google-plus mr-2"></i> Sign in using Google+
-        </a>
-      </div>
-      <!-- /.social-auth-links -->
+      
 
       <p class="mb-1">
-        <a href="forgot-password.html">I forgot my password</a>
+        <a href="forgot-password.html">Şifremi Unuttum</a>
       </p>
       <p class="mb-0">
-        <a href="register" class="text-center">Register a new membership</a>
+        <a href="register" class="text-center">Yeni Kayıt</a>
       </p>
     </div>
     <!-- /.card-body -->
