--- a/djangos/templates/register.html
+++ b/djangos/templates/register.html
@@ -79,18 +79,9 @@
           <h3>{{message}}</h3>
         {%endfor%}
       </div>
-      <div class="social-auth-links text-center">
-        <a href="#" class="btn btn-block btn-primary">
-          <i class="fab fa-facebook mr-2"></i>
-          Sign up using Facebook
-        </a>
-        <a href="#" class="btn btn-block btn-danger">
-          <i class="fab fa-google-plus mr-2"></i>
-          Sign up using Google+
-        </a>
-      </div>
+      
 
-      <a href="login" class="text-center">I already have a membership</a>
+      <a>Zaten üye misiniz ? <a href="login" class="text-center"> Giriş Yap</a>
     </div>
     <!-- /.form-box -->
   </div><!-- /.card -->
