--- a/djangos/templates/bayi_Urunler.html
+++ b/djangos/templates/bayi_Urunler.html
@@ -255,10 +255,26 @@
               </li>
             </ul>
             <li class="nav-item">
-              <a href="/bayi/bayi_Finans.html" class="nav-link">
+              <a href="/bayi/bayi_Bakım.html" class="nav-link">
                 <i class="fas fa-boxes"></i>
                 <p>
                   {{element7.elementName}}
+                </p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="/bayi/bayi_Odemelerim.html" class="nav-link">
+                <i class="fas fa-boxes"></i>
+                <p>
+                  {{element8.elementName}}
+                </p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="/bayi/bayi_Finans.html" class="nav-link">
+                <i class="fas fa-boxes"></i>
+                <p>
+                  {{element9.elementName}}
                 </p>
               </a>
             </li>
